# second-brain

./: .gitignore  DEMO.md  README.md  chainlit_app.py  main.py  pyproject.toml
data/: about-me.md
src/: brain.py  eval.py  ingest.py  telemetry.py
